2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c:
	  Make popup animation vary the anchor point to allow us to
	  continue animation even when the window changes size halfway
	  through.

2009-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c:
	  Recognize home applet actors and leave them wherever they are,
	  in the blur group, instead of reparenting them to the arena
	  and let them disappear forever when we go to tasw/talu mode.

2009-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  When a new window is mapped don't activate the desktop even if
	  the current state NEED_DESKTOP(), as client activation causes
	  setting the _MB_WM_CURRENT_APP_WINDOW, which causes trouble
	  with FKB.
	* src/mb/hd-desktop.c:
	  Make the desktop's stacking and the MBWindowManagerFlagDesktop
	  dependant on the current state.

	This also prevents the last application to be shown in home view
	state when some application maps a new dialog.

2009-01-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#96936

	* src/home/hd-task-navigator.c:
	  Restore the opacity of the thumbnail's title and foreground tile
	  when we're about to enter the switcher without transition.
	  Make sure they are transparent otherwise.

2009-01-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#95641

	* src/mb/hd-note.c:
	  Instead of ignoring ->stack() requests set the layer to Bottom
	  in case of HdNoteTypeIncomingEvent:s.  matchbox is in the belief
	  that the first client of its type wants to stack itself higher.

2009-01-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c
	* src/launcher/hd-launcher.c
	* src/util/hd-transition.c
	* src/util/hd-util.c
	* src/util/hd-transition.h

	Moved application started/closed noise making from the navigator
	to the launcher (hd_launcher_transition_app_start()) and
	hd_transition_close_app().
