@@ -1081,6 +1081,38 @@ hd_comp_mgr_effect (MBWMCompMgr                *mgr,
     }
 }
 
+/*
+ * Returns the client that should be the _MB_CURRENT_APP_WINDOW,
+ * according to window stacking.
+ * TODO Update it when we have got smarter in recognizing
+ * "applications".
+ */
+static MBWindowManagerClient *
+current_app (MBWindowManager *wm)
+{
+  MBWindowManagerClient *c;
+
+  /* Select the topmost client that is either the desktop
+   * or a non-transient %HdApp; select it's leader if that
+   * happens to be in a stackable group. */
+  for (c = wm->stack_top; ; c = c->stacked_below)
+    {
+
+      /* Hmm, the desktop should always be in the stack, shouldn it? */
+      g_return_val_if_fail (c != NULL, wm->desktop);
+
+      if (MB_WM_CLIENT_CLIENT_TYPE (c) & MBWMClientTypeDesktop)
+        return c;
+      if (!HD_IS_APP (c))
+        continue;
+      if (c->transient_for)
+        continue;
+      if (!c->window)
+        continue;
+      return HD_APP (c)->leader ? MB_WM_CLIENT (HD_APP (c)->leader) : c;
+    }
+}
+
 void
 hd_comp_mgr_restack (MBWMCompMgr * mgr)
 {
@@ -1134,7 +1166,25 @@ hd_comp_mgr_restack (MBWMCompMgr * mgr)
           c = c->stacked_above;
         }*/
 
-      hd_render_manager_restack();
+      /* Update _MB_CURRENT_APP_WINDOW if we're ready and it's changed. */
+      if (mgr->wm && mgr->wm->root_win && mgr->wm->desktop)
+        {
+          static Window last;
+          MBWindowManagerClient *c;
+
+          c = current_app(mgr->wm);
+          if (c->window->xwindow != last)
+            {
+              last = c->window->xwindow;
+              XChangeProperty(mgr->wm->xdpy, mgr->wm->root_win->xwindow,
+                              mgr->wm->atoms[MBWM_ATOM_MB_CURRENT_APP_WINDOW],
+                              XA_WINDOW, 32, PropModeReplace,
+                              (unsigned char *)&last, 1);
+            }
+
+        }
+
+        hd_render_manager_restack();
     }
 }
 
